# mappingRobot

./: .gitignore  README.TXT
Arduino code/: firmware01.ino
CAD/: Display bezel.stl  README
CAD/Use for laser cutting/: lower chassis plate_2.DXF  rplidar mount_2.DXF  upper chassis plate2_2.DXF
CPU software/: README.txt  commonlyUsedFunctions.cpp  commonlyUsedFunctions.hpp  compileIt.sh  sendSerial.cpp  serialPortStuff.cpp  serialPortStuff.hpp
CPU software/dev_ws/: README_JACK.txt
CPU software/dev_ws/install/: setup.sh
CPU software/dev_ws/src/: README-making-packages.txt
CPU software/dev_ws/src/jack_test/: CMakeLists.txt  README_CUSTOM_MESSAGES.txt  package.xml
CPU software/dev_ws/src/jack_test/msg/: README_MESSAGE_NAMING.txt  SampleMessage.msg
CPU software/dev_ws/src/mapping_robot/: CMakeLists.txt  package.xml
CPU software/dev_ws/src/mapping_robot/src/: commonlyUsedFunctions.cpp  commonlyUsedFunctions.hpp  manualDrivingNode.cpp  manualDrivingNode.hpp  mcuNode.cpp  mcuNode.hpp  rplidarClass.cpp  rplidarClass.hpp  rplidarNode.cpp  rplidarNode.hpp  serialPortStuff.cpp  serialPortStuff.hpp
CPU_software/: README.txt  makeRobotBeActiveOnBoot.sh  mappingRobot.service  mappingRobotSetup.sh  mappingRobotStartupScript.sh
CPU_software/dev_ws/: README_JACK.txt
CPU_software/dev_ws/install/mapping_robot/share/mapping_robot/: mappingRobotLaunch.py  mapping_robot.launch.py
CPU_software/dev_ws/install/mapping_robot/share/mapping_robot/launch/: README.txt
CPU_software/dev_ws/src/: README-making-packages.txt
CPU_software/dev_ws/src/mapping_robot/: CMakeLists.txt  package.xml
CPU_software/dev_ws/src/mapping_robot/launch/: mappingRobotLaunch.py
CPU_software/dev_ws/src/mapping_robot/src/: commonlyUsedFunctions.hpp  manualDrivingNode.cpp  mcuNode.cpp  mcuNode.hpp  rplidarClass.cpp  rplidarClass.hpp  rplidarNode.cpp  rplidarNode.hpp  serialPortStuff.hpp
Circuit boards/: Propeller board rev 1.5.brd  Propeller board rev 1.5.sch  propeller v1.5 parts list  propeller v1.5 parts list.txt
Circuit boards/motor controller only/: L298 motor controller.brd  L298 motor controller.sch
Propeller code/: ADC.spin  ASMcopyVariable.spin  ConnectedMotors.spin  I2C PASM driver v1.8od.spin  PWM.spin  README.txt  SSD1306_fast.spin  blink.spin  blinkLEDonDevBoard.spin  encoder.spin  font.5x8.spin  lowLevelController.spin  lowLevelController02.spin  lowLevelController03.spin  positionalPID.spin  quadSerialPorts.spin  sigmaDelta.spin  testingStuff_fast_I2C.spin  velocityControlProgram.spin  velocityPID.spin  velocityWithAccelerationPID.spin  velocityWithAccelerationTester.spin
Remote computer code/: UDPsend3.cpp  UDPsend3.h  mappingRobot.cpp
remote_computer_software/: README.txt
remote_computer_software/src/remote_computer/: CMakeLists.txt  package.xml
remote_computer_software/src/remote_computer/src/: joystick_driving_node.cpp  joystick_driving_node.hpp
remote_computer_software/src/remote_computer_python/: package.xml  setup.cfg  setup.py
remote_computer_software/src/remote_computer_python/remote_computer_python/: lidar_viewer.py
